fix!: aquarium layout issue

--- a/src/pages/game/Game.css
+++ b/src/pages/game/Game.css
@@ -445,6 +445,7 @@ html[data-theme='dark'] .app-logo-light {
 
 .aquarium-fish-sell-button {
   width: 100%;
+  margin-top: auto;
 }
 
 .fish-sell-modal {
